--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@ a{
     text-decoration: none;
     color: black;
 }
+button{
+    border: 2px solid black;
+    border-radius: 10px;
+    color: aqua;
+    background-color:aquamarine;
+    padding: 4px  5px;
+
+}
