--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,33 @@
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* display: flex; */
+}
+body{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    background-color:cadetblue;
+    border: 2px solid black;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    height: 25%;
+    width: 25%;
+    /* background-color: aliceblue; */
+    
+    
+
+}
 p{
     color: bisque;
 }
